wacc/test/golden/semanticErr.variables.caseMatters
# variable names are case sensitive

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin

  int number = 42 ;
  println NUMBER
  
end


Semantic error in test/wacc_examples/invalid/semanticErr/variables/caseMatters.wacc (line 14, column 11):
Variable "NUMBER" was not declared.
>   int number = 42 ;
>   println NUMBER
>           ^^^^^^
>   

